# huffman_encoding_

./: CMakeLists.txt  Makefile  README.md
data/: test1.txt
data/data/: test2.txt
src/: Node.cpp  Node.h
